feat(Slider) - fix slide size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- TODO: description, keyword -->
-    <meta name="description" content="Гущина Анастасия. Опытный project manager. Управление командами, запуск digital-продуктов, оптимизация процессов и коммуникаций. Помогаю бизнесу достигать целей через чёткое управление проектами." />
+    <meta name="description" content="Опытный project manager. Управление командами, запуск digital-продуктов, оптимизация процессов и коммуникаций. Помогаю бизнесу достигать целей через чёткое управление проектами." />
     <meta name="keywords" content="Гущина Анастасия, project manager, управление проектами, digital проекты, проджект менеджер, scrum, agile, kanban, product management" />
     <meta name="author" content="Гущина Анастасия" />
     <meta name="robots" content="index, follow" />
