feat(SEO) - adjust seo

--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- TODO: description, keyword -->
-    <meta name="description" content="Опытный project manager. Управление командами, запуск digital-продуктов, оптимизация процессов и коммуникаций. Помогаю бизнесу достигать целей через чёткое управление проектами." />
-    <meta name="keywords" content="Гущина Анастасия, project manager, управление проектами, digital проекты, проджект менеджер, scrum, agile, kanban, product management" />
+    <meta name="description" content="Опытный project manager. Провожу консультации для тех, кто начинает свой путь в онлайне и для опытных проджект-менеджеров, которые хотят уверенно расти в онлайн-среде: системно, спокойно и без выгорания" />
+    <meta name="keywords" content="Гущина Анастасия, project manager, управление проектами, digital проекты, проджект менеджер, проджект, проджект менеджер, инфобизнес, медиа" />
     <meta name="author" content="Гущина Анастасия" />
     <meta name="robots" content="index, follow" />
 
     <!-- ✅ Open Graph (Facebook, LinkedIn) -->
-    <!-- TODO: description -->
     <meta property="og:title" content="Project Manager | Гущина Анастасия" />
-    <meta property="og:description" content="Управление проектами, командами и digital-продуктами. Project Manager с опытом в маркетинге." />
+    <meta property="og:description" content="Опытный project manager. Провожу консультации для тех, кто начинает свой путь в онлайне и для опытных проджект-менеджеров, которые хотят уверенно расти в онлайн-среде: системно, спокойно и без выгорания" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://anastasia-online.ru/" />
     <meta property="og:image" content="https://anastasia-online.ru/preview.jpg" />
     <meta property="og:locale" content="ru_RU" />
 
     <!-- ✅ Twitter -->
-     <!-- TODO: description -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Project Manager | Гущина Анастасия" />
-    <meta name="twitter:description" content="Project Manager — управление командами, продуктами и процессами." />
+    <meta name="twitter:description" content="Опытный project manager. Провожу консультации для тех, кто начинает свой путь в онлайне и для опытных проджект-менеджеров, которые хотят уверенно расти в онлайн-среде: системно, спокойно и без выгорания" />
     <meta name="twitter:image" content="https://anastasia-online.ru/preview.jpg" />
 
     <!-- ✅ Canonical -->
@@ -37,7 +34,6 @@
     <script type="module" src="/src/main.ts"></script>
 
     <!-- ✅ Structured Data (Google Schema.org) -->
-    <!-- TODO: description -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -49,7 +45,7 @@
         "@type": "Organization",
         "name": "Freelance / IT Projects"
       },
-      "description": "Опытный project manager в IT. Управление командами, digital-проектами и процессами.",
+      "description": "Опытный project manager. Провожу консультации для тех, кто начинает свой путь в онлайне и для опытных проджект-менеджеров, которые хотят уверенно расти в онлайн-среде: системно, спокойно и без выгорания",
       "image": "https://anastasia-online.ru/preview.jpg",
       "sameAs": [
         "https://www.instagram.com/anastasia.gush?igsh=MW1jNzRjeXdnODNxaQ=="
